# simple-threads

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
doc/: CMakeLists.txt  Doxyfile.in
example/src/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
include/simple-threads/: ThreadManager.h
src/: CMakeLists.txt  ThreadManager.cpp  ThreadManager.h
tests/: CMakeLists.txt  main.cpp
